tests/pos/sin.hs
module SinPosTest where

test :: Floating a => a -> a
test x = sin x
